fixed everything except refresh and reset password

--- a/pdrrmo-backend/.env
+++ b/pdrrmo-backend/.env
@@ -36,6 +36,7 @@ EMAIL_FROM=pdrrmotrainings@gmail.com
 
 # ========================================
 # 🚩 Client URL (for password reset links)
-CLIENT_URL=https://pdrrmo-training-frontend.onrender.com
-#CLIENT_URL=https://pdrrmo.bulacan.gov.ph
+# CLIENT_URL=https://pdrrmo-training-frontend.onrender.com
+CLIENT_URL=https://pdrrmo.bulacan.gov.ph/pdrrmo-training
+# CLIENT_URL=http://localhost/pdrrmo/wp-content/reactpress/apps/pdrrmo-training
 
