--- a/pdrrmo-training/.env.development
+++ b/pdrrmo-training/.env.development
@@ -1,4 +1,6 @@
-REACT_APP_API_BASE_URL=http://localhost:5000/api
+# REACT_APP_API_BASE_URL=http://localhost:8000
+# REACT_APP_API_BASE_URL=http://localhost:8000/pdrrmo/pdrrmo-backend
+# REACT_APP_API_BASE_URL=http://localhost/pdrrmo/pdrrmo-training
 # REACT_APP_API_BASE_URL=https://pdrrmo-training.onrender.com
 #REACT_APP_API_BASE_URL=https://localhost:5000/pdrrmo/pdrrmo-training/pdrrmo-backend/api
 GENERATE_SOURCEMAP=false
