--- a/pdrrmo-training/.env.production
+++ b/pdrrmo-training/.env.production
@@ -1,5 +1,8 @@
+# REACT_APP_API_BASE_URL=http://localhost:8000
 #REACT_APP_API_BASE_URL=https://localhost/pdrrmo/pdrrmo-training/api
-# REACT_APP_API_BASE_URL=https://api.pdrrmo.bulacan.gov.ph/pdrrmo-training
-REACT_APP_API_BASE_URL=https://pdrrmo-training.onrender.com/api
-#REACT_APP_API_BASE_URL=https://pdrrmo.bulacan.gov.ph/wp-content/reactpress/apps/pdrrmo-training/pdrrmo-backend/api
+# REACT_APP_API_BASE_URL=https://localhost/pdrrmo/pdrrmo-training
+# PUBLIC_URL=https://pdrrmo.bulacan.gov.ph/pdrrmo-training
+REACT_APP_API_BASE_URL=https://api.pdrrmo.bulacan.gov.ph
+# REACT_APP_API_BASE_URL=https://pdrrmo-training.onrender.com/api
+PUBLIC_URL=https://pdrrmo.bulacan.gov.ph/wp-content/reactpress/apps/pdrrmo-training
 GENERATE_SOURCEMAP=false
